# verifid

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.yaml
.agents/skills/development-standards/: SKILL.md
.claude/skills/: sqlmodel
.claude/skills/development-standards/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  pyproject.toml
.devcontainer/scripts/: post-create.sh
.github/workflows/: docker-publish.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: depends.py  status.py  verified_id.py
backend/app/core/: config.py
backend/app/schemas/: status.py  verified_id.py
backend/app/services/: storage.py  verified_id_service.py
frontend/: angular.json  ngsw-config.json  package-lock.json  package.json  tsconfig.json
frontend/public/: manifest.webmanifest
frontend/src/: index.html  main.ts  manifest.webmanifest  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/guards/: auth.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/services/: auth.service.ts  i18n.service.ts  status.service.ts  verified-id.service.ts
frontend/src/app/features/assistance-dashboard/: assistance-dashboard.component.css  assistance-dashboard.component.html  assistance-dashboard.component.ts
frontend/src/app/features/auth-debug/: auth-debug.component.css  auth-debug.component.html  (+1 more)
(+6 files in other folders)
